hard-gists/5900563/run.log
=== Docker Run Log for 5900563 ===
Started at: Mi 29. Okt 16:09:39 CET 2025

[2025-10-29 16:09:40] START: Running container for 5900563
[2025-10-29 16:09:40] SUCCESS: Container d577946c95e79eeeae2d3d89985c7d4e38161f6b70dbcccf2246cf6778be618f started for 5900563
=== Container logs for 5900563 ===
  File "/snippet.py", line 71
    print 'Total time (s) | Number of calls | avg time (s) | median time (s) | standard deviation (s) | Keyword name'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5900563 ===
[2025-10-29 16:09:42] INFO: Container d577946c95e79eeeae2d3d89985c7d4e38161f6b70dbcccf2246cf6778be618f has stopped
